--- a/config/database.yml
+++ b/config/database.yml
@@ -20,6 +20,9 @@ default: &default
   # For details on connection pooling, see Rails configuration guide
   # https://guides.rubyonrails.org/configuring.html#database-pooling
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
+  database: dacty_app_production
+  username: tomtar9779
+  password: <%= ENV['DACTY_APP_DATABASE_PASSWORD'] %>
 
 development:
   <<: *default
